lab1/Test/L1-A-13-10.output
Error Type A at Line 1
Error Type B at Line 4
Error Type B at Line 19
Error Type B at Line 26
Error Type A at Line 27
Error Type B at Line 36
Error Type A at Line 43
Error Type B at Line 47
Error Type B at Line 49
