lab1/Test/L1-A-13-10.cmm
struct rLlI3NK_y_T #dEE_5M0MypcyFU ( float pNZ , int 
  JP5aL2 ) {
  struct {
>   }nBRobL99 [ 1544251804 ] ;
}
int hRa_Wili1h61 ( ) {
  return rIoydDgLrj6LbG ;
}
int ;
int ;
int ;
struct PR {
  int qUc9g ;
  int Jdutt_x30zKW3UFq , TdTo = RNpNSuxfUR = qCy859gWjE0wsur 
    || TM5h2jf1dMhel4HpEZ >= tKmVQ + pLh / ! miczifjGZTm3iG 
    ( gfRFsL , xGO7KXK && HsrL == GP0VXSMZQ8AXGHbvm * 
    - bttfYkqE [ RHvGtVymO0WQv = wgqLIm6sKGHAP && hb6JGQSSFnqFtnfNct 
    < ( fHud5VCcKbDH9lBQ = iN0rXvHMh = ( e9PiBJlsrja5IU 
    = Msgta22DV0e6LEhL > ! ( && EJQMqrmou <= a6LU ) ) 
    . OkZ_aF59kSkMpc / 1116356880 ) != 86933305.1047627537 
    - QC0GO14snc6ITy ( ) - ! zwZuer3LSxP ] ) . RNxRuLJgDryUbE99 
    ;
}F3suIc4MVkgFBS56 , SP525P 


struct QWPqIo1TPHsHdEJt2gYU ;
int $t3VP6UDM ( ) {
}
int ;
int ;
int ;
int ;
int ;
int EdGP3O5ob6MJi7pQSOM ( ) {
  if ( bTRiYS4CUrmT )   cdK62qh7VQx ;
else   if ( Ddoo b3a_mCQqQw6D )   while ( ZxpQ7lRLg6DvJn1od6 
    )   if ( ytqNmoYwUyxCbzSS )   WgLs9 ;
else   _atW3WC2N3tn4bjIRVS4 ;




  if ( `hB7voa1Km8 ) {
  }
}
int ;
;
int ;
;